--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>flying Pigs</title>
+    <img src="https://cdn.4patriots.com/flyingpigs/maxresdefault.jpg" class="img-responsive center-block"/>
 </head>
 <body>
 
