--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>flying Pigs</title>
     <img src="https://cdn.4patriots.com/flyingpigs/maxresdefault.jpg" class="img-responsive center-block"/>
+    <img src="https://cdn.4patriots.com/flyingpigs/pikachu-under-construction.gif" class="img-responsive center-block"/>
 </head>
 <body>
 
