--- a/index.html
+++ b/index.html
@@ -1,15 +1,96 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>flying Pigs</title>
-    <img src="https://cdn.4patriots.com/flyingpigs/maxresdefault.jpg" class="img-responsive center-block"/>
-    <img src="https://cdn.4patriots.com/flyingpigs/pikachu-under-construction.gif" class="img-responsive center-block"/>
+  <meta charset="UTF-8">
+  <title>Valet Test Site</title>
+
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+
+<link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/reset.css"> <!-- CSS reset -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
+
 <body>
+  <body>
+	<header>
+		<div id="cd-logo"><a href="#0"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-logo_3.svg" alt="Logo"></a></div>
+		<h1>Welcome To The White Test Site</h1>
+	</header>
+
+	<div id="cd-nav">
+		<a href="#0" class="cd-nav-trigger">Menu<span></span></a>
+
+		<nav id="cd-main-nav">
+			<ul>
+				<li><a href="#0">Homepage</a></li>
+				<li><a href="#0">Services</a></li>
+				<li><a href="#0">Portfolio</a></li>
+				<li><a href="#0">Pricing</a></li>
+				<li><a href="#0">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
+
+	<main>
+		<ul id="cd-gallery-items" class="cd-container">
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+
+			<li>
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+			</li>
+		</ul> <!-- cd-gallery-items -->
+	</main>
+</body>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+
 
 </body>
 </html>
