--- a/index.html
+++ b/index.html
@@ -3,35 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Valet Test Site</title>
-
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-
 <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/reset.css"> <!-- CSS reset -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-
-  
       <link rel="stylesheet" href="css/style.css">
-
-  
 </head>
-
 <body>
   <body>
 	<header>
 		<div id="cd-logo"><a href="#0"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-logo_3.svg" alt="Logo"></a></div>
-		<h1>Welcome To The White Test Site</h1>
+		<h1>Welcome to the world’s primer location for flying pig information.</h1>
 	</header>
-
 	<div id="cd-nav">
 		<a href="#0" class="cd-nav-trigger">Menu<span></span></a>
 
 		<nav id="cd-main-nav">
 			<ul>
 				<li><a href="#0">Homepage</a></li>
-				<li><a href="#0">Services</a></li>
-				<li><a href="#0">Portfolio</a></li>
-				<li><a href="#0">Pricing</a></li>
-				<li><a href="#0">Contact</a></li>
+				<li><a href="diet.html">Diet</a></li>
+				<li><a href="reproduction.html">Reproduction</a></li>
+				<li><a href="culture.html">Pop culture</a></li>
+				<li><a href="communication.html">Communication</a></li>
+				<li><a href="behavior.html">Behavior</a></li>
+				<li><a href="misc.html">Misc. Facts</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -39,7 +33,7 @@
 	<main>
 		<ul id="cd-gallery-items" class="cd-container">
 			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+				<img src="https://cdn.4patriots.com/flyingpigs/maxresdefault.jpg" alt="Preview image">
 			</li>
 
 			<li>
