--- a/communication.html
+++ b/communication.html
@@ -31,55 +31,8 @@
 </div>
 
 <main>
-    <ul id="cd-gallery-items" class="cd-container">
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-    </ul> <!-- cd-gallery-items -->
+    <h1>Animal communication</h1>
+        <p>These pigs can oink</p>
 </main>
 </body>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
