--- a/Behavior.html
+++ b/Behavior.html
@@ -31,55 +31,11 @@
 </div>
 
 <main>
-    <ul id="cd-gallery-items" class="cd-container">
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-    </ul> <!-- cd-gallery-items -->
+    <h2>Animal Behavior</h2>
+    <p>The flying pig uses its very dependable nose to sniff out its favorite food – lighting bugs. The lightning bugs provide it with essential magical nutrients that supplement the pig’s ability to fly.</p>
+    <p>The flying pig is very good at protecting itself from predators that are alive as they can smell a mile away. However, due to their blindness, their lifespan is short because it runs into things it cannot smell such as planes, helicopters etc.</p>
+    <p>When Flying pigs get tired, they find a rainbow, follow it to the end and curl up next to its magical pot of gold. This is where they derive the magic necessary to fly.</p>
+    <p>The behavior of the pig depends on how close it is to a rainbow. The closer a rainbow, the happier the pig. Flying pigs can be found floating about, ready to cuddle in between sunshine and rain showers. However, if you see a flying pig in the absence of a rainbow, it is not recommended you approach. Things can turn deadly.</p>
 </main>
 </body>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
