--- a/culture.html
+++ b/culture.html
@@ -31,55 +31,12 @@
 </div>
 
 <main>
-    <ul id="cd-gallery-items" class="cd-container">
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
+    <h1>Flying Pigs in Popular Culture</h1>
+    <p>Flying pigs are mostly misrepresented by society. Many people interpret them as being gnarly, gruesome, violent and angry. This is only because these people have do not spend enough time hanging out around rainbows.</p>
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
+    <p>Many societies choose to not believe in the flying pigs and this results in very few sightings of the pigs as they are only visible to those who believe.</p>
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-    </ul> <!-- cd-gallery-items -->
+    <p>Flying pigs are a common topic in old indigenous legends. You can find these books in your local library.</p>
 </main>
 </body>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
