--- a/misc.html
+++ b/misc.html
@@ -31,55 +31,13 @@
 </div>
 
 <main>
-    <ul id="cd-gallery-items" class="cd-container">
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-    </ul> <!-- cd-gallery-items -->
+    <h1></h1>
+        <ul>
+            <li>Flying pigs are genderless!</li>
+            <li>Flying pigs do not need to migrate South for the winter, but will in fact maintain their body temperature by adjusting flight altitude.</li>
+            <li>Evolution and flights around the world have led to what experts estimate as over a hundred undiscovered species of flying pig!</li>
+            <li>It is legal in Texas to hunt flying pigs via helicopter due to their threat to Texan farmer fields and property.</li>
+        </ul>
 </main>
 </body>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
