--- a/index.html
+++ b/index.html
@@ -34,58 +34,32 @@
 	<main>
 		<ul id="cd-gallery-items" class="cd-container">
 			<li>
-				<img src="https://cdn.4patriots.com/flyingpigs/maxresdefault.jpg" alt="Preview image">
+				<img src="https://cdn.4patriots.com/flyingpigs/Pig1.png" alt="Preview image">
 			</li>
-
+		</ul> <!-- cd-gallery-items -->
+		<ul id="cd-gallery-items" class="cd-container">
 			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+				<img src="https://cdn.4patriots.com/flyingpigs/Pig2.png" alt="Preview image">
 			</li>
-
+		</ul> <!-- cd-gallery-items -->
+		<ul id="cd-gallery-items" class="cd-container">
 			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+				<img src="https://cdn.4patriots.com/flyingpigs/Pig3.png" alt="Preview image">
 			</li>
-
+		</ul> <!-- cd-gallery-items -->
+		<ul id="cd-gallery-items" class="cd-container">
 			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-			</li>
-
-			<li>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
+				<img src="https://cdn.4patriots.com/flyingpigs/Pig4.png" alt="Preview image">
 			</li>
 		</ul> <!-- cd-gallery-items -->
 	</main>
 </body>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-  
+<script type="application/javascript">
+
+</script>
+
 
 
 </body>
