--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<nav id="cd-main-nav">
 			<ul>
-				<li><a href="#0">Homepage</a></li>
+				<li><a href="index.html">Homepage</a></li>
 				<li><a href="diet.html">Diet</a></li>
 				<li><a href="reproduction.html">Reproduction</a></li>
 				<li><a href="culture.html">Pop culture</a></li>
