--- a/diet.html
+++ b/diet.html
@@ -31,55 +31,20 @@
 </div>
 
 <main>
-    <ul id="cd-gallery-items" class="cd-container">
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
+    <h1>Dietary Information</h1>
+    <p>The diet of the flying pig is lighting bugs. This supports their flying abilities. They glow happiness as a result.</p>
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
+    Flying pigs also ingest moisture from clouds via passageways in their snouts. This is the pig’s primary source for staying hydrated in flight.
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
+    Domesticated flying pigs eat high in protein “slop” for maximum mass.
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
+    Read also:
 
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-
-        <li>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb_1.jpg" alt="Preview image">
-        </li>
-    </ul> <!-- cd-gallery-items -->
+    www.air-to-table.org
+    www.lightingbugsupply.com
 </main>
 </body>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
