--- a/diet.html
+++ b/diet.html
@@ -19,7 +19,7 @@
 
     <nav id="cd-main-nav">
         <ul>
-            <li><a href="index.html">Homepage</a></li>
+            <li><a href="#0">Homepage</a></li>
             <li><a href="diet.html">Diet</a></li>
             <li><a href="reproduction.html">Reproduction</a></li>
             <li><a href="culture.html">Pop culture</a></li>
@@ -34,17 +34,14 @@
     <h1>Dietary Information</h1>
     <p>The diet of the flying pig is lighting bugs. This supports their flying abilities. They glow happiness as a result.</p>
 
-    Flying pigs also ingest moisture from clouds via passageways in their snouts. This is the pig’s primary source for staying hydrated in flight.
+    <p>Flying pigs also ingest moisture from clouds via passageways in their snouts. This is the pig’s primary source for staying hydrated in flight.</p>
 
-    Domesticated flying pigs eat high in protein “slop” for maximum mass.
+    <p>Domesticated flying pigs eat high in protein “slop” for maximum mass.</p>
 
+    <h3>Read also:</h3>
 
-
-
-    Read also:
-
-    www.air-to-table.org
-    www.lightingbugsupply.com
+    <a href="http://www.air-to-table.org">www.air-to-table.org</a>
+    <a href="http://www.lightingbugsupply.com">www.lightingbugsupply.com</a>
 </main>
 </body>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
