--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 		<nav id="cd-main-nav">
 			<ul>
 				<li><a href="index.html">Homepage</a></li>
-				<li><a href="diet.html">Diet</a></li>
-				<li><a href="reproduction.html">Reproduction</a></li>
+				<!--<li><a href="diet.html">Diet</a></li>-->
+				<!--<li><a href="reproduction.html">Reproduction</a></li>-->
 				<li><a href="culture.html">Pop culture</a></li>
-				<li><a href="communication.html">Communication</a></li>
+				<!--<li><a href="communication.html">Communication</a></li>-->
 				<li><a href="behavior.html">Behavior</a></li>
-				<li><a href="misc.html">Misc. Facts</a></li>
+				<!--<li><a href="misc.html">Misc. Facts</a></li>-->
 			</ul>
 		</nav>
 	</div>
