--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <body>
 	<header>
-		<div id="cd-logo"><a href="#0"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-logo_3.svg" alt="Logo"></a></div>
+		<div id="cd-logo"><a href="#0"><img src="/images/logo.jpg" alt="Logo"></a></div>
 		<h1>Welcome to the world’s premier location for flying pig information.</h1>
 	</header>
 	<div id="cd-nav">
