--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				<img src="https://cdn.4patriots.com/flyingpigs/Pig4.png" alt="Preview image">
 			</li>
 		</ul> <!-- cd-gallery-items -->
-		<h2>Interesting facts about the majestic flying pig</h2>
-		<ul>
+		<h2>Interesting Facts About The Majestic Flying Pig:</h2>
+		<ul style="color: white">
 			<li>Flying pigs are genderless!</li>
 			<li>Flying pigs do not need to migrate South for the winter, but will in fact maintain their body temperature by adjusting flight altitude.</li>
 			<li>Evolution and flights around the world have led to what experts estimate as over a hundred undiscovered species of flying pig!</li>
