--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 <script type="application/javascript">
+    $(document).ready(function() {
 
+        $("#cd-gallery-items>li>img").fancybox({
+            'transitionIn'	:	'elastic',
+            'transitionOut'	:	'elastic',
+            'speedIn'		:	600,
+            'speedOut'		:	200,
+            'overlayShow'	:	false
+        });
+
+    });
 </script>
 
 
