--- a/behavior.html
+++ b/behavior.html
@@ -11,8 +11,8 @@
 <body>
 <body>
 <header>
-    <div id="cd-logo"><a href="#0"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-logo_3.svg" alt="Logo"></a></div>
-    <h1>Welcome to the world’s primer location for flying pig information.</h1>
+    <div id="cd-logo"><a href="#0"><img src="/images/logo.jpg" alt="Logo"></a></div>
+    <h1>Welcome To The World’s Premier Location For Flying Pig Information</h1>
 </header>
 <div id="cd-nav">
     <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
