--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 	<header>
 		<div id="cd-logo"><a href="#0"><img src="/images/logo.jpg" alt="Logo"></a></div>
-		<h1>Welcome to the world’s premier location for flying pig information.</h1>
+		<h1>Welcome To The World’s Premier Location For Flying Pig Information</h1>
 	</header>
 	<div id="cd-nav">
 		<a href="#0" class="cd-nav-trigger">Menu<span></span></a>
